Refactor: Improve Makefile robustness and update README
- Makefile:

    - Modified 'stop' target to include 'docker rm -f' for more reliable container removal.

    - Corrected syntax error in 'run-openvpn' and 'run-wireguard' targets by removing trailing comments on port mapping lines.

- README.md:

    - Added Docker Hub pull command (magicalyak/nzbgetvpn).

    - Restructured 'Quick Setup' to be clearer for users pulling the image from Docker Hub, emphasizing host directory preparation.

    - Added a new 'Healthcheck' section.

    - Clarified PRIVOXY_PORT and PRIVOXY_HOST_PORT usage for manual 'docker run' commands and Makefile users.

    - General improvements for clarity and user experience.

- Confirmed PRIVOXY_PORT configurability and updated related settings.

--- a/.env.sample
+++ b/.env.sample
@@ -24,6 +24,9 @@ WG_CONFIG_FILE=/config/wireguard/wg0.conf
 # --- Privoxy Settings ---
 # Enable Privoxy HTTP proxy (yes/no or true/false)
 ENABLE_PRIVOXY=yes
+# Optional: Define the port Privoxy listens on inside the container.
+# Default is 8118. If you change this, you might need to adjust host port mapping in Makefile or docker run command.
+# PRIVOXY_PORT=8118
 
 # --- Network & DNS Settings ---
 # Optional: Comma-separated list of DNS servers to use (e.g., "1.1.1.1,8.8.8.8").
