Refactor: Consolidate VPN config vars and improve .env structure
- VPN Configuration:

    - Consolidated WG_CONFIG_FILE into VPN_CONFIG. The VPN_CLIENT variable now determines how VPN_CONFIG is interpreted (for OpenVPN .ovpn or WireGuard .conf).

    - Updated root/vpn-setup.sh to use VPN_CONFIG for both OpenVPN and WireGuard.

    - Updated README.md and .env.sample to reflect the unified VPN_CONFIG variable.

- .env.sample:

    - Reorganized sections for better readability and clarity.

    - Adjusted commenting style for user-settable variables (comments now follow the variable).

- README.md:

    - Text and examples updated to align with the unified VPN_CONFIG.

    - Minor improvements to Docker run examples and explanations for clarity.

--- a/.env.sample
+++ b/.env.sample
@@ -1,60 +1,73 @@
 # .env - Docker Run Configuration
+# Environment variables for the nzbgetvpn container
 
-# --- VPN Settings ---
-# Choose your VPN client: "openvpn" or "wireguard"
+# --- Core VPN Settings -------------------------------------------------------
 VPN_CLIENT=openvpn
+# Choose your VPN client: "openvpn" or "wireguard"
 
-# --- OpenVPN Specific (only if VPN_CLIENT=openvpn) ---
-# Path to your .ovpn file inside the container (mounted from ./config/openvpn/)
-# If left empty, the script will try to use the first .ovpn file found in ./config/openvpn/.
-VPN_CONFIG=/config/openvpn/yourvpn.ovpn
-# Your OpenVPN username and password.
-# These are the primary way to provide credentials.
-# Other methods (credential files) are secondary. See "OpenVPN Credential Handling".
-VPN_USER=your_openvpn_username
-VPN_PASS=your_openvpn_password
-# Optional: Additional command-line options for the OpenVPN client.
+VPN_CONFIG=
+# Path to your VPN configuration file inside the container.
+# - For OpenVPN: e.g., /config/openvpn/your_provider.ovpn
+# - For WireGuard: e.g., /config/wireguard/wg0.conf
+# If left empty, the script will try to use the first .ovpn (for OpenVPN) or .conf (for WireGuard)
+# file found in the respective /config/openvpn or /config/wireguard directory.
+
+# VPN_CREDENTIALS_FILE=
+# Optional: Path to OpenVPN credentials file (username on line 1, password on line 2).
+# If this is set and the file exists, VPN_USER and VPN_PASS below will be ignored.
+# Example: /config/vpn_credentials.txt
+
+# --- OpenVPN Specific Credentials (if not using VPN_CREDENTIALS_FILE) --------
+# These are ignored if VPN_CREDENTIALS_FILE is set and valid.
+VPN_USER=
+# Your OpenVPN username.
+VPN_PASS=
+# Your OpenVPN password.
+
 # VPN_OPTIONS=--inactive 3600 --ping-exit 60
+# Optional: Additional command-line options for the OpenVPN client.
 
-# --- WireGuard Specific (only if VPN_CLIENT=wireguard) ---
-# Path to your WireGuard config file inside the container (mounted from ./config/wireguard/)
-# If left empty, the script will try to use the first .conf file found in ./config/wireguard/ (e.g. wg0.conf).
-WG_CONFIG_FILE=/config/wireguard/wg0.conf
-
-# --- Privoxy Settings ---
-# Enable Privoxy HTTP proxy (yes/no or true/false)
-ENABLE_PRIVOXY=yes
-# Optional: Define the port Privoxy listens on inside the container.
-# Default is 8118. If you change this, you might need to adjust host port mapping in Makefile or docker run command.
-# PRIVOXY_PORT=8118
-
-# --- Network & DNS Settings ---
-# Optional: Comma-separated list of DNS servers to use (e.g., "1.1.1.1,8.8.8.8").
-# If empty and using OpenVPN, attempts to use DNS servers pushed by the VPN provider.
-# If still no DNS, falls back to defaults (e.g., 198.18.0.1, 198.18.0.2 for some providers, or common public ones).
+# --- Network & DNS Settings -------------------------------------------------
 # NAME_SERVERS=1.1.1.1,8.8.8.8
-# Optional: Your LAN network (CIDR notation, e.g., 192.168.1.0/24).
-# Allows access to your local network while VPN is active.
-# LAN_NETWORK=192.168.1.0/24
-# Optional: Comma-separated list of additional TCP/UDP ports to allow outbound through the VPN.
-# E.g., for a script that needs to connect on port 9090:
-# ADDITIONAL_PORTS=9090
+# Optional: Comma-separated list of DNS servers to use (e.g., "1.1.1.1,8.8.8.8").
+# - OpenVPN: If empty, attempts to use DNS pushed by VPN. If none, uses fallbacks.
+# - WireGuard: If empty, uses DNS from WireGuard config. NAME_SERVERS here will override it.
 
-# --- General Container Settings (from linuxserver.io base) ---
-# User and Group ID for NZBGet process. Match to your host user for easy file permissions.
-# Find yours with `id -u` and `id -g` on Linux/macOS.
+# LAN_NETWORK=192.168.1.0/24
+# Optional: Your LAN network (CIDR notation, e.g., 192.168.1.0/24).
+# Allows access to/from your local network, bypassing the VPN for these connections.
+
+# ADDITIONAL_PORTS=
+# Optional: Comma-separated list of additional TCP/UDP ports to allow outbound through the VPN.
+# E.g., for a script that needs to connect on port 9090: "9090" or for UDP on 53: "53/udp"
+
+# --- Privoxy Settings -------------------------------------------------------
+ENABLE_PRIVOXY=no
+# Enable Privoxy HTTP proxy ("yes" or "no")
+
+# PRIVOXY_PORT=8118
+# Optional: Define the port Privoxy listens on inside the container.
+# Default is 8118. If you change this, adjust host port mapping in docker run.
+
+# --- General Container Settings (from linuxserver.io base) ------------------
 PUID=1000
+# User ID for NZBGet process. Match to your host user for easy file permissions.
+# Find yours with `id -u` on Linux/macOS.
 PGID=1000
-# Timezone for the container, e.g., America/New_York, Europe/London
+# Group ID for NZBGet process. Match to your host user for easy file permissions.
+# Find yours with `id -g` on Linux/macOS.
+
 TZ=Etc/UTC
+# Timezone for the container, e.g., America/New_York, Europe/London
+
+UMASK=022
 # File creation mask for NZBGet. 022 is a common default (user rwx, group rx, other rx).
 # 002 would give group write access as well.
-UMASK=022
 
-# --- NZBGet Specific (Optional - can be set in NZBGet UI later) ---
-# NZBGET_USER=nzbget_ui_username
-# NZBGET_PASS=nzbget_ui_password
+# --- NZBGet Specific (Optional - can be set in NZBGet UI later) ------------
+# NZBGET_USER=
+# NZBGET_PASS=
 
-# --- Debugging ---
-# Enable verbose script logging (set -x) by setting to "true"
+# --- Debugging --------------------------------------------------------------
 # DEBUG=false
+# Enable verbose script logging (set -x) by setting to "true"
