--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Build and Publish Docker Image
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -7,53 +7,66 @@ name: Docker
 
 on:
   push:
-    branches: [master, experimental]
+    branches: [ main ] # Trigger on pushes to the main branch
     # Publish semver tags as releases.
     tags:
-      - '*'
+      - 'v*.*.*' # Trigger on tags like v1.0.0, v1.2.3
 
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: magicalyak/nzbgetvpn # Explicitly set your Docker Hub image name
 
 jobs:
-  build:
+  build-and-push:
+    name: Build and Push to Docker Hub
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
+      packages: write # Required for pushing to ghcr.io if used, good to have for Docker Hub too
+      # id-token: write # Required for OIDC token if using keyless auth with cloud providers
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4 # Updated to v4
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Set up QEMU for multi-arch builds (optional)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3 # Updated to v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v5 # Updated to v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE_NAME }} # Use the explicitly defined IMAGE_NAME
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
+            type=schedule,pattern=nightly,enable={{is_schedule}}
+            type=ref,event=branch,enable={{is_default_branch}}
+            type=ref,event=tag
+            type=sha,prefix=,suffix=,event=branch,enable={{is_default_branch}}
+            type=sha,prefix=,suffix=,event=tag
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
 
-      # Build and push Docker image with Buildx
-      # https://github.com/docker/build-push-action
       - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        id: build-and-push
+        uses: docker/build-push-action@v5 # Updated to v5
         with:
-          push: ${{ github.event_name != 'pull_request' }}
           context: .
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: ${{ github.event_name != 'pull_request' }} # Do not push on PRs
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
