--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,13 +22,27 @@ jobs:
     name: Build and Push to Docker Hub
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write # Needed to push new Git tags
       packages: write # Required for pushing to ghcr.io if used, good to have for Docker Hub too
       # id-token: write # Required for OIDC token if using keyless auth with cloud providers
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4 # Updated to v4
+        with:
+          # Fetch all history for all tags and branches for the auto-tagging action
+          fetch-depth: 0
+
+      - name: Bump version and push tag
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        id: tag_version
+        uses: anothrNick/github-tag-action@1.67.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DEFAULT_BUMP: patch
+          # Ensure the action commits the tag back to the repository
+          # This is often the default, but good to be mindful of.
 
       - name: Set up QEMU for multi-arch builds (optional)
         uses: docker/setup-qemu-action@v3
@@ -49,14 +63,28 @@ jobs:
         with:
           images: ${{ env.IMAGE_NAME }} # Use the explicitly defined IMAGE_NAME
           tags: |
+            # For scheduled builds
             type=schedule,pattern=nightly
+
+            # For pushes to the main (default) branch
             type=ref,event=branch,enable={{is_default_branch}}
-            type=ref,event=tag
             type=sha,prefix=,suffix=,event=branch,enable={{is_default_branch}}
-            type=sha,prefix=,suffix=,event=tag
+
+            # For Git tags (e.g., vX.Y.Z)
+            # If Git tag is "v21.1.0", these produce Docker tags:
+            # "21.1.0", "21.1", "21"
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
+            
+            # Also include the Git tag itself as a Docker tag (e.g., "v21.1.0")
+            type=ref,event=tag
+            # And the commit SHA for that tag
+            type=sha,prefix=,suffix=,event=tag
+
+            # Set 'latest' Docker tag to point to the highest semver Git tag.
+            # Active only for Git tag events matching 'vX.Y.Z'.
+            type=latest
 
       - name: Build and push Docker image
         id: build-and-push
