--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -73,7 +73,7 @@ jobs:
             # For Git tags (e.g., vX.Y.Z)
             # If Git tag is "v21.1.0", these produce Docker tags:
             # "21.1.0", "21.1", "21"
-            type=semver,pattern={{version}}
+            type=semver,pattern={{version}},latest=true
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             
@@ -84,7 +84,6 @@ jobs:
 
             # Set 'latest' Docker tag to point to the highest semver Git tag.
             # Active only for Git tag events matching 'vX.Y.Z'.
-            type=latest
 
       - name: Build and push Docker image
         id: build-and-push
