CI: Update Dockerfile and workflow to support multi-platform builds and set default values for environment variables

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -93,6 +93,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
           builder: ${{ steps.buildx.outputs.name }}
           push: ${{ github.event_name != 'pull_request' }} # Do not push on PRs
           tags: ${{ steps.meta.outputs.tags }}
