CI: Update VPN credential handling to prioritize environment variables and fixed file path

--- a/.env.sample
+++ b/.env.sample
@@ -1,73 +1,80 @@
-# .env - Docker Run Configuration
-# Environment variables for the nzbgetvpn container
+# .env.sample - Example configuration for nzbgetvpn
+# Copy this to .env and customize for your setup.
 
-# --- Core VPN Settings -------------------------------------------------------
+# ---- VPN Client Settings ----
+# VPN_CLIENT: 'openvpn' or 'wireguard'
 VPN_CLIENT=openvpn
-# Choose your VPN client: "openvpn" or "wireguard"
 
+# VPN_CONFIG: Path *inside the container* to your VPN configuration file.
+# For OpenVPN: e.g., /config/openvpn/your_provider.ovpn
+# For WireGuard: e.g., /config/wireguard/wg0.conf
+# If unset, the script will try to use the first .ovpn or .conf file found in the
+# respective /config/openvpn or /config/wireguard directory.
 VPN_CONFIG=
-# Path to your VPN configuration file inside the container.
-# - For OpenVPN: e.g., /config/openvpn/your_provider.ovpn
-# - For WireGuard: e.g., /config/wireguard/wg0.conf
-# If left empty, the script will try to use the first .ovpn (for OpenVPN) or .conf (for WireGuard)
-# file found in the respective /config/openvpn or /config/wireguard directory.
 
-# VPN_CREDENTIALS_FILE=
-# Optional: Path to OpenVPN credentials file (username on line 1, password on line 2).
-# If this is set and the file exists, VPN_USER and VPN_PASS below will be ignored.
-# Example: /config/vpn_credentials.txt
+# ---- OpenVPN Specific Credentials ----
+# There are two ways to provide OpenVPN credentials if your .ovpn file requires them
+# (e.g., it contains `auth-user-pass` without a specific file path, or just `auth-user-pass`).
 
-# --- OpenVPN Specific Credentials (if not using VPN_CREDENTIALS_FILE) --------
-# These are ignored if VPN_CREDENTIALS_FILE is set and valid.
+# Option 1: Use Environment Variables (Recommended if not using a file)
+# These are used if both VPN_USER and VPN_PASS are set and not empty.
 VPN_USER=
-# Your OpenVPN username.
 VPN_PASS=
-# Your OpenVPN password.
 
-# VPN_OPTIONS=--inactive 3600 --ping-exit 60
-# Optional: Additional command-line options for the OpenVPN client.
+# Option 2: Use a Credentials File at a Fixed Location
+# If VPN_USER and VPN_PASS are NOT set (or one/both are empty), the script will
+# automatically look for a credentials file at the fixed path inside the container:
+#   /config/openvpn/credentials.txt
+# This file must contain your username on the first line and your password on the second line.
+# To use this method:
+#   1. Create a text file (e.g., `my_vpn_auth.txt` or simply `credentials.txt`) on your host system.
+#   2. Add your VPN username to the first line.
+#   3. Add your VPN password to the second line.
+#   4. Ensure this file is mounted into the container at `/config/openvpn/credentials.txt`.
+#      For example, if you map your host directory `/opt/nzbgetvpn_data/config` to `/config`
+#      in the container, you would place your credentials file on the host at
+#      `/opt/nzbgetvpn_data/config/openvpn/credentials.txt`.
+# (The old VPN_CREDENTIALS_FILE environment variable is no longer used.)
 
-# --- Network & DNS Settings -------------------------------------------------
-# NAME_SERVERS=1.1.1.1,8.8.8.8
-# Optional: Comma-separated list of DNS servers to use (e.g., "1.1.1.1,8.8.8.8").
-# - OpenVPN: If empty, attempts to use DNS pushed by VPN. If none, uses fallbacks.
-# - WireGuard: If empty, uses DNS from WireGuard config. NAME_SERVERS here will override it.
-
-# LAN_NETWORK=192.168.1.0/24
-# Optional: Your LAN network (CIDR notation, e.g., 192.168.1.0/24).
-# Allows access to/from your local network, bypassing the VPN for these connections.
-
-# ADDITIONAL_PORTS=
-# Optional: Comma-separated list of additional TCP/UDP ports to allow outbound through the VPN.
-# E.g., for a script that needs to connect on port 9090: "9090" or for UDP on 53: "53/udp"
-
-# --- Privoxy Settings -------------------------------------------------------
+# ---- General Settings ----
+# ENABLE_PRIVOXY: 'yes' or 'no' to enable/disable Privoxy HTTP proxy (also uses VPN)
 ENABLE_PRIVOXY=no
-# Enable Privoxy HTTP proxy ("yes" or "no")
 
-# PRIVOXY_PORT=8118
-# Optional: Define the port Privoxy listens on inside the container.
-# Default is 8118. If you change this, adjust host port mapping in docker run.
+# PRIVOXY_PORT: Port Privoxy will listen on *inside* the container.
+# The Docker -p mapping will expose this to your host.
+PRIVOXY_PORT=8118
 
-# --- General Container Settings (from linuxserver.io base) ------------------
+# PUID & PGID: User and Group ID for NZBGet and related processes.
+# Set these to match the owner of your host's /config and /downloads directories
+# to avoid permission issues. Find yours with `id yourusername` on your host.
 PUID=1000
-# User ID for NZBGet process. Match to your host user for easy file permissions.
-# Find yours with `id -u` on Linux/macOS.
 PGID=1000
-# Group ID for NZBGet process. Match to your host user for easy file permissions.
-# Find yours with `id -g` on Linux/macOS.
 
+# TZ: Your local timezone, e.g., America/New_York, Europe/London
+# See: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TZ=Etc/UTC
-# Timezone for the container, e.g., America/New_York, Europe/London
 
+# LAN_NETWORK: Your LAN network in CIDR notation (e.g., 192.168.1.0/24).
+# Allows NZBGet/Privoxy access from your LAN, bypassing the VPN for these local connections.
+LAN_NETWORK=
+
+# NAME_SERVERS: Comma-separated list of DNS servers to be used by the container.
+# If not set, DNS servers from the VPN or system defaults will be used.
+# Example: 1.1.1.1,8.8.8.8
+NAME_SERVERS=
+
+# DEBUG: 'true' or 'false'. Enables verbose logging for VPN setup scripts.
+DEBUG=false
+
+# VPN_OPTIONS: Additional command-line options for the OpenVPN client.
+# Example: --inactive 3600 --ping-restart 60
+VPN_OPTIONS=
+
+# UMASK: File creation mask for NZBGet.
 UMASK=022
-# File creation mask for NZBGet. 022 is a common default (user rwx, group rx, other rx).
-# 002 would give group write access as well.
 
-# --- NZBGet Specific (Optional - can be set in NZBGet UI later) ------------
-# NZBGET_USER=
-# NZBGET_PASS=
-
-# --- Debugging --------------------------------------------------------------
-# DEBUG=false
-# Enable verbose script logging (set -x) by setting to "true"
+# ADDITIONAL_PORTS: Comma-separated list of additional TCP or UDP ports
+# (e.g., 9090, 53/udp, 8080/tcp) that should be allowed for *outbound* traffic
+# originating from within the container, through the VPN tunnel.
+# This does NOT publish these ports from the container to the host.
+ADDITIONAL_PORTS=
