--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -80,27 +80,29 @@ jobs:
             # For scheduled builds
             type=schedule,pattern=nightly
 
-            # For pushes to the main (default) branch
+            # For pushes to the main (default) branch - these always run
             type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=branch,enable={{is_default_branch}}
             type=sha,prefix=,suffix=,event=branch,enable={{is_default_branch}},format=short
 
-            # For Git tags (e.g., vX.Y.Z)
-            # If Git tag is "v21.1.0", these produce Docker tags:
-            # "21.1.0", "21.1", "21"
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            
-            # Also include the Git tag itself as a Docker tag (e.g., "v21.1.0")
-            type=ref,event=tag
-            # And the commit SHA for that tag
-            type=sha,prefix=,suffix=,event=tag,format=short
+            # For the NEWLY CREATED Git tag from tag_version step (if it exists in this run)
+            # These tags are added if 'tag_version' step outputted a new_tag
+            type=semver,pattern={{version}},value=${{ steps.tag_version.outputs.new_tag }},enable=${{ steps.tag_version.outputs.new_tag != '' }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ steps.tag_version.outputs.new_tag }},enable=${{ steps.tag_version.outputs.new_tag != '' }}
+            type=semver,pattern={{major}},value=${{ steps.tag_version.outputs.new_tag }},enable=${{ steps.tag_version.outputs.new_tag != '' }}
+            type=raw,value=${{ steps.tag_version.outputs.new_tag }},enable=${{ steps.tag_version.outputs.new_tag != '' }} # The vX.Y.Z tag itself
 
-            # Set 'latest' Docker tag to point to the highest semver Git tag.
-            # Active only for Git tag events matching 'vX.Y.Z'.
+            # For actual Git tag push events (when the workflow is triggered by a tag, not a branch push)
+            # 'tag_version' step won't run, so new_tag output will be empty, disabling the rules above.
+            type=semver,pattern={{version}},event=tag
+            type=semver,pattern={{major}}.{{minor}},event=tag
+            type=semver,pattern={{major}},event=tag
+            type=ref,event=tag
+            type=sha,prefix=,suffix=,event=tag,format=short
           flavor: |
-            latest=auto
+            latest=auto # This will correctly set 'latest' for the default branch,
+                        # AND for the highest semver tag (whether from a direct tag event
+                        # or from the new_tag generated in a main branch push)
 
       - name: Build and push Docker image
         id: build-and-push
