CI: Update tag handling in workflow to set default tag to 'v25.0.0' for newly created tags

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -86,18 +86,16 @@ jobs:
             type=sha,prefix=,suffix=,event=branch,enable=${{ github.ref == 'refs/heads/main' }},format=short
 
             # For the NEWLY CREATED Git tag from tag_version step (if it exists in this run)
-            # These tags are added if 'tag_version' step outputted a new_tag
-            type=semver,pattern={{version}},value=${{ steps.tag_version.outputs.new_tag || '0.0.0' }},enable=${{ steps.tag_version.outputs.new_tag != '' }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ steps.tag_version.outputs.new_tag || '0.0.0' }},enable=${{ steps.tag_version.outputs.new_tag != '' }}
-            type=semver,pattern={{major}},value=${{ steps.tag_version.outputs.new_tag || '0.0.0' }},enable=${{ steps.tag_version.outputs.new_tag != '' }}
-            type=raw,value=${{ steps.tag_version.outputs.new_tag || 'v0.0.0' }},enable=${{ steps.tag_version.outputs.new_tag != '' }} # The vX.Y.Z tag itself
+            # This adds the vX.Y.Z tag itself.
+            type=raw,value=${{ steps.tag_version.outputs.new_tag || 'v25.0.0' }},enable=${{ steps.tag_version.outputs.new_tag != '' }}
 
             # For actual Git tag push events (when the workflow is triggered by a tag, not a branch push)
-            # 'tag_version' step won't run, so new_tag output will be empty, disabling the rules above.
+            # 'tag_version' step won't run, so its new_tag output will be empty, disabling the rule above.
+            # These rules will generate the full semver set (X.Y.Z, X.Y, X, vX.Y.Z) for tag events.
             type=semver,pattern={{version}},event=tag
             type=semver,pattern={{major}}.{{minor}},event=tag
             type=semver,pattern={{major}},event=tag
-            type=ref,event=tag
+            type=ref,event=tag # This is equivalent to the raw new_tag but specific to tag events
             type=sha,prefix=,suffix=,event=tag,format=short
           flavor: |
             latest=auto # This will correctly set 'latest' for the default branch,
