CI: Remove redundant enable flags for tag handling in workflow

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -77,8 +77,8 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,value=latest,enable=true
-            type=sha,format=short,prefix=sha-,enable=true
+            type=raw,value=latest
+            type=sha,format=short,prefix=sha-
           flavor: |
             latest=auto # This will correctly set 'latest' for the default branch,
                         # AND for the highest semver tag (whether from a direct tag event
