--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -7,71 +7,38 @@ name: Build and Publish Docker Image
 
 on:
   push:
-    branches:
-      - main
-    tags:
-      - 'v*' # Matches tags like v1.2.3, v25.0.0 etc.
-  schedule:
-    - cron: '0 0 * * 0' # Run weekly on Sunday at midnight UTC
-  workflow_dispatch: # Allow manual triggering
+    branches: [main]
+  workflow_dispatch:
 
 env:
-  # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ github.repository_owner }}/nzbgetvpn # Use repository owner for Docker Hub username
+  IMAGE_NAME: ${{ github.repository_owner }}/nzbgetvpn
 
 jobs:
   build-and-push:
-    name: Build and Push to Docker Hub
     runs-on: ubuntu-latest
-    permissions:
-      contents: write # Needed to push new Git tags
-      packages: write # Required for pushing to ghcr.io if used, good to have for Docker Hub too
-      id-token: write # Needed for OIDC if you were to use keyless signing
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4 # Updated to v4
-        with:
-          # Fetch all history for all tags and branches for the auto-tagging action
-          fetch-depth: 0
-
-      - name: Bump version and push tag
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        id: tag_version
-        uses: anothrNick/github-tag-action@1.67.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
-          DEFAULT_BUMP: patch
-          # Ensure the action commits the tag back to the repository
-          # This is often the default, but good to be mindful of.
-
-      - name: Set up QEMU for multi-arch builds (optional)
-        uses: docker/setup-qemu-action@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver: docker-container # Use a containerized builder for more features
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3 # Updated to v3
+      - name: Debug environment
+        run: |
+          echo "Repository: ${{ github.repository }}"
+          echo "Owner: ${{ github.repository_owner }}"
+          echo "Image: ${{ env.IMAGE_NAME }}"
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@v5 # Updated to v5
+        uses: docker/metadata-action@v5
         with:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -80,23 +47,15 @@ jobs:
             type=raw,value=latest
             type=sha,format=short,prefix=sha-
           flavor: |
-            latest=auto # This will correctly set 'latest' for the default branch,
-                        # AND for the highest semver tag (whether from a direct tag event
-                        # or from the new_tag generated in a main branch push)
+            latest=auto
 
       - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@v5 # Updated to v5
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
-          builder: ${{ steps.buildx.outputs.name }}
-          push: ${{ github.event_name != 'pull_request' }} # Do not push on PRs
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
   # Optional: Create GitHub Release when a new Git tag is pushed
   create-release:
