--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -7,9 +7,10 @@ name: Build and Publish Docker Image
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
     tags:
-      - 'v*'
+      - 'v[0-9]+.[0-9]+.[0-9]+*' # More specific SEMVER pattern
   workflow_dispatch:
 
 env:
@@ -26,6 +27,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure full history for all branches and tags
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
