feat: Convert nzbgetvpn to transmissionvpn

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# .env.sample - Example configuration for nzbgetvpn
+# .env.sample - Example configuration for transmissionvpn
 # Copy this to .env and customize for your setup.
 
 # ---- VPN Client Settings ----
@@ -31,9 +31,9 @@ VPN_PASS=
 #   2. Add your VPN username to the first line.
 #   3. Add your VPN password to the second line.
 #   4. Ensure this file is mounted into the container at `/config/openvpn/credentials.txt`.
-#      For example, if you map your host directory `/opt/nzbgetvpn_data/config` to `/config`
+#      For example, if you map your host directory `/opt/transmissionvpn_data/config` to `/config`
 #      in the container, you would place your credentials file on the host at
-#      `/opt/nzbgetvpn_data/config/openvpn/credentials.txt`.
+#      `/opt/transmissionvpn_data/config/openvpn/credentials.txt`.
 # (The old VPN_CREDENTIALS_FILE environment variable is no longer used.)
 
 # ---- General Settings ----
@@ -44,8 +44,8 @@ ENABLE_PRIVOXY=no
 # The Docker -p mapping will expose this to your host.
 PRIVOXY_PORT=8118
 
-# PUID & PGID: User and Group ID for NZBGet and related processes.
-# Set these to match the owner of your host's /config and /downloads directories
+# PUID & PGID: User and Group ID for Transmission and related processes.
+# Set these to match the owner of your host's /config, /downloads, and /watch directories
 # to avoid permission issues. Find yours with `id yourusername` on your host.
 PUID=1000
 PGID=1000
@@ -55,7 +55,7 @@ PGID=1000
 TZ=Etc/UTC
 
 # LAN_NETWORK: Your LAN network in CIDR notation (e.g., 192.168.1.0/24).
-# Allows NZBGet/Privoxy access from your LAN, bypassing the VPN for these local connections.
+# Allows Transmission/Privoxy access from your LAN, bypassing the VPN for these local connections.
 LAN_NETWORK=
 
 # NAME_SERVERS: Comma-separated list of DNS servers to be used by the container.
@@ -70,11 +70,19 @@ DEBUG=false
 # Example: --inactive 3600 --ping-restart 60
 VPN_OPTIONS=
 
-# UMASK: File creation mask for NZBGet.
-UMASK=022
+# UMASK: File creation mask for Transmission and files it creates.
+# The linuxserver/transmission base image often defaults to 002, which is good for group write access.
+# 022 is more restrictive (group read-only).
+UMASK=002
 
 # ADDITIONAL_PORTS: Comma-separated list of additional TCP or UDP ports
-# (e.g., 9090, 53/udp, 8080/tcp) that should be allowed for *outbound* traffic
+# (e.g., 51413, 51413/udp for Transmission P2P) that should be allowed for *outbound* traffic
 # originating from within the container, through the VPN tunnel.
 # This does NOT publish these ports from the container to the host.
+# For Transmission, you might need to allow its listening port here if UPnP/NAT-PMP fails
+# and you want to ensure connectivity *through the VPN* for incoming peer connections.
+# This is different from the Web UI port (9091), which is typically accessed locally.
 ADDITIONAL_PORTS=
+
+# TRANSMISSION_VERSION: Set in the Dockerfile, informational. Reflects the base image version.
+# TRANSMISSION_VERSION=4.0.6
