--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ github.repository_owner }}/nzbgetvpn
+  IMAGE_NAME: ${{ github.repository_owner }}/transmissionvpn
 
 jobs:
   build-and-push:
