feat: Add more Transmission options and document FILE__ secrets

--- a/.env.sample
+++ b/.env.sample
@@ -86,3 +86,57 @@ ADDITIONAL_PORTS=
 
 # TRANSMISSION_VERSION: Set in the Dockerfile, informational. Reflects the base image version.
 # TRANSMISSION_VERSION=4.0.6
+
+# ---- Transmission Specific Settings ----
+# These are passed to the linuxserver/transmission base image.
+# See https://docs.linuxserver.io/images/docker-transmission for more details on some of these.
+
+# TRANSMISSION_RPC_AUTHENTICATION_REQUIRED: 'true' or 'false'. Enable/disable password protection for the Web UI.
+# Default: false
+# TRANSMISSION_RPC_AUTHENTICATION_REQUIRED=false
+
+# TRANSMISSION_RPC_USERNAME: Username for Web UI if authentication is enabled.
+# Default: (empty)
+# TRANSMISSION_RPC_USERNAME=
+
+# TRANSMISSION_RPC_PASSWORD: Password for Web UI if authentication is enabled.
+# Default: (empty)
+# TRANSMISSION_RPC_PASSWORD=
+
+# TRANSMISSION_RPC_HOST_WHITELIST: Comma-separated list of IP addresses/ranges to allow Web UI access from.
+# Default: '127.0.0.1,192.168.*.*,10.*.*.*,172.16.*.*'
+# TRANSMISSION_RPC_HOST_WHITELIST=
+
+# TRANSMISSION_RPC_WHITELIST_ENABLED: 'true' or 'false'. Enable/disable the host whitelist.
+# Default: true
+# TRANSMISSION_RPC_WHITELIST_ENABLED=true
+
+# TRANSMISSION_PEER_PORT: Port Transmission uses for incoming P2P connections (TCP and UDP).
+# If blank, a random port is usually chosen by Transmission on startup. Set this if you need a fixed port, 
+# for example, for port forwarding through your VPN provider or firewall.
+# Ensure this port is also listed in ADDITIONAL_PORTS if you want to allow it through the VPN.
+# Default: (empty, random)
+# TRANSMISSION_PEER_PORT=
+
+# TRANSMISSION_INCOMPLETE_DIR: Path *inside the container* for partially downloaded files.
+# If enabled, the base image usually defaults this to /downloads/incomplete.
+# Default: (empty, uses base image default)
+# TRANSMISSION_INCOMPLETE_DIR=
+
+# TRANSMISSION_INCOMPLETE_DIR_ENABLED: 'true' or 'false'. Enable/disable the incomplete downloads directory feature.
+# Default: true
+# TRANSMISSION_INCOMPLETE_DIR_ENABLED=true
+
+# TRANSMISSION_WATCH_DIR_ENABLED: 'true' or 'false'. Enable/disable watching the /watch directory for .torrent files.
+# The watch directory itself is fixed at /watch via volume mount.
+# Default: true
+# TRANSMISSION_WATCH_DIR_ENABLED=true
+
+# TRANSMISSION_BLOCKLIST_ENABLED: 'true' or 'false'. Enable/disable the peer blocklist feature.
+# Default: true
+# TRANSMISSION_BLOCKLIST_ENABLED=true
+
+# TRANSMISSION_BLOCKLIST_URL: URL of the blocklist to download. The base image has a default.
+# Example: "http://john.bitsurge.net/public/biglist.p2p.gz"
+# Default: (uses base image default)
+# TRANSMISSION_BLOCKLIST_URL=
