--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -8,7 +8,7 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - main
+      - '**' # Trigger on all branches
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+*' # More specific SEMVER pattern
   workflow_dispatch:
@@ -23,7 +23,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
+      id-token: write # Required for OIDC if used, good practice
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -38,6 +38,7 @@ jobs:
           echo "Repository: ${{ github.repository }}"
           echo "Owner: ${{ github.repository_owner }}"
           echo "Image: ${{ env.IMAGE_NAME }}"
+          echo "Ref: ${{ github.ref }}"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -69,8 +70,12 @@ jobs:
             type=semver,pattern={{major}}.{{minor}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             type=semver,pattern={{major}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
             type=ref,event=tag,enable=${{ startsWith(github.ref, 'refs/tags/v') }} # Adds the tag itself, e.g., v1.2.3
+
+            # For pushes to any other branch (not main, not a tag)
+            type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/v') }}
+            type=sha,format=short,prefix=sha-,enable=${{ github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/v') }}
           flavor: |
-            latest=auto
+            latest=auto # Ensure latest is only applied if explicitly matched (e.g. on main)
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -99,7 +104,6 @@ jobs:
         with:
           config-name: release-drafter.yml # Optional: if you have custom config
           publish: true # Automatically publish the release
-          # tag: ${{ github.ref_name }} # Explicitly use the tag that triggered the workflow
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
