feat: Enhance health check and logging for VPN and Privoxy, update .gitignore, and add Transmission setup script

--- a/.env.sample
+++ b/.env.sample
@@ -127,6 +127,10 @@ ADDITIONAL_PORTS=
 # Default: true
 # TRANSMISSION_INCOMPLETE_DIR_ENABLED=true
 
+# TRANSMISSION_WATCH_DIR: Path *inside the container* for the watch directory (auto-add .torrent files).
+# Default: /watch (matches the volume mount)
+# TRANSMISSION_WATCH_DIR=/watch
+
 # TRANSMISSION_WATCH_DIR_ENABLED: 'true' or 'false'. Enable/disable watching the /watch directory for .torrent files.
 # The watch directory itself is fixed at /watch via volume mount.
 # Default: true
@@ -140,3 +144,57 @@ ADDITIONAL_PORTS=
 # Example: "http://john.bitsurge.net/public/biglist.p2p.gz"
 # Default: (uses base image default)
 # TRANSMISSION_BLOCKLIST_URL=
+
+# ---- Alternative Web UI (LinuxServer.io Compatible) ----
+# TRANSMISSION_WEB_HOME: Path *inside the container* to alternative web UI files.
+# Use this with a mounted volume for best results.
+# Example: -v ./flood-for-transmission:/web-ui:ro -e TRANSMISSION_WEB_HOME=/web-ui
+# TRANSMISSION_WEB_HOME=/web-ui
+
+# TRANSMISSION_WEB_UI: (Legacy) Shows instructions for manual setup.
+# Options: combustion, kettu, flood-for-transmission, transmission-web-control
+# Setting this will show setup instructions in the logs.
+# TRANSMISSION_WEB_UI=flood-for-transmission
+
+# ---- Health Check & Logging Settings ----
+# HEALTH_CHECK_HOST: Host to ping for network connectivity verification through VPN
+# Default: google.com
+# HEALTH_CHECK_HOST=google.com
+
+# LOG_TO_STDOUT: Send Transmission logs to stdout for 'docker logs' instead of log file
+# Options: 'true' or 'false'
+# Default: false
+# LOG_TO_STDOUT=false
+
+# ---- LinuxServer.io Docker Mods ----
+# DOCKER_MODS: Extend container functionality with LinuxServer.io Docker Mods
+# Use pipe (|) separator for multiple mods
+# See: https://github.com/linuxserver/docker-mods
+
+# Theme.park - Beautiful dark themes for Transmission web UI
+# DOCKER_MODS=ghcr.io/gilbn/theme.park:transmission
+# TP_THEME=hotline
+# Available themes: hotline, dark, dracula, aquamarine, organizr, space-gray, overseerr, nord, plex
+
+# Universal Package Install - Install additional OS or Python packages
+# DOCKER_MODS=lscr.io/linuxserver/mods:universal-package-install
+# INSTALL_PACKAGES=unrar|p7zip|mediainfo|curl|git
+# INSTALL_PIP_PACKAGES=apprise|requests
+
+# Enhanced Archive Support - Modern unrar v6
+# DOCKER_MODS=lscr.io/linuxserver/mods:universal-unrar6
+
+# Troubleshooting Tools - Network and system debugging tools
+# DOCKER_MODS=lscr.io/linuxserver/mods:universal-tshoot
+
+# Multiple Mods Example - Combine theme + packages + troubleshooting
+# DOCKER_MODS=ghcr.io/gilbn/theme.park:transmission|lscr.io/linuxserver/mods:universal-package-install|lscr.io/linuxserver/mods:universal-tshoot
+# TP_THEME=hotline
+# INSTALL_PACKAGES=unrar|mediainfo|curl
+
+# Advanced VPN Mods (Community) - Enhanced WireGuard with PIA
+# DOCKER_MODS=pyunramura/wireguard-pia
+# LOC=swiss
+# WG_USER=your_pia_username  
+# WG_PASS=your_pia_password
+# PORT_FORWARDING=true
